--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,10 @@ jobs:
         with:
           name: ${{ matrix.artifact-name }}
           path: build/allOutputs
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.artifact-name }} BUILD OPTIONS
+          path: "**/build/tmp/**/options.txt"
 
   build-macos:
     env:
